--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "get-base-url": "^3.0.1",
-    "pass-cors": "^1.1.0",
     "playwright-chromium": "^1.21.0",
-    "probe-image-size": "^7.2.3"
+    "probe-image-size": "^7.2.3",
+    "tldts": "^5.7.77"
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^2.0.6"
   }
 }
