--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "filereader": "^0.10.3",
     "get-base-url": "^3.0.1",
+    "image-to-base64": "^2.2.0",
+    "node-fetch": "^2.6.7",
     "playwright-chromium": "^1.21.0",
     "probe-image-size": "^7.2.3",
     "tldts": "^5.7.77"
